clusters/apps/raffle-app/raffle-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: raffle-nest-backend-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: raffle-nest-backend
  serviceName: raffle-nest-backend-service
  template:
    metadata:
      labels:
        app: raffle-nest-backend
    spec:
      containers:
        - name: raffle-nest-backend
          image: wololoaeyoyo/raffle-nest-backend:latest
          ports:
            - containerPort: 3000
              protocol: TCP
