clusters/apps/raffle-app/raffle-app-service.yml
---
apiVersion: v1
kind: Service
metadata:
 name: raffle-nest-backend-service
 namespace: default

spec:
 selector:
 app: raffle-nest-backend
 ports:
  protocol: TCP
  port: 3000
  targetPort: 3000
