clusters/apps/raffle-app/raffle-app-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: raffle-nest-backend-ingress
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.raffle.local.wololoaeyoyo.com`)
      kind: Rule
      services:
        - name: raffle-nest-backend-deployment
          port: 3000
    - match: Host(`raffle.local.wololoaeyoyo.com`)
      kind: Rule
      services:
        - name: raffle-nest-backend-deployment
          port: 3000
  tls:
    secretName: local-wololoaeyoyo-com-tls
