clusters/apps/raffle-app/raffle-app-networking.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: raffle-nest-backend-network
  namespace: default
spec:
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector: {}
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: raffle-nest-backend-service
